--- a/database/study001_20170921.md
+++ b/database/study001_20170921.md
@@ -6,9 +6,38 @@
 > 이론에 질문이 있으면 받기로 결정
 
 선행사항
+1.	닷홈의 phpMyAdmin에서 실행 1.1 닷홈에 가입한다.[마이닷홈](https://dothome.co.kr) 
+    1.2 무료호스팅 생성 
+    1.3 호스팅된 어드민으로 입장 (주소는 아래와 같다.)
+        + (본인인이 정한 아이디).dothome.co.kr/myadmin
 
-1.	닷홈의 phpMyAdmin에서 실행 1.1 닷홈에 가입한다.[마이닷홈](https://dothome.co.kr) 1.2 무료호스팅 생성 1.3 호스팅된 어드민으로 입장 (주소는 아래와 같다.)
 
-2.	(본인인이 정한 아이디).dothome.co.kr/myadmin
 
-3.	SQL 기초 실행
+### 기초SQL
+
+databse 만들기
+    
+```
+ CREATE DATABASE 데이터베이스 이름   
+```
+
+table 만들기( 데이터베이스 선택후에 )
+
+```
+CREATE TABLE 테이블 이름 (
+    column1 datatype,
+    column2 datatype,
+    column3 datatype,
+)
+```
+
+table에 자료 삽입`
+
+```
+기본적인 방법
+INSERT INTO 테이블이름 VALUES (data1, data2, data3)
+
+지정한 컬럼에 넣는 방법
+INSERT INTO 테이블이름(column1, column2, column3) VALUES (data1, data2, data3)
+```
+주의할 점은 데이터 중에 글자들은 '' 또는 ""  으로 감싸줘야한다.
