--- a/database/study001_20170921.md
+++ b/database/study001_20170921.md
@@ -6,9 +6,10 @@
 > 이론에 질문이 있으면 받기로 결정
 
 선행사항
-1.	닷홈의 phpMyAdmin에서 실행 1.1 닷홈에 가입한다.[마이닷홈](https://dothome.co.kr) 
-    1.2 무료호스팅 생성 
-    1.3 호스팅된 어드민으로 입장 (주소는 아래와 같다.)
+1.	닷홈의 phpMyAdmin에서 실행 
+    1. 닷홈에 가입한다.[마이닷홈](https://dothome.co.kr) 
+    1. 무료호스팅 생성 
+    1. 호스팅된 어드민으로 입장 (주소는 아래와 같다.)
         + (본인인이 정한 아이디).dothome.co.kr/myadmin
 
 
