--- a/database/study003_20171012.md
+++ b/database/study003_20171012.md
@@ -12,9 +12,9 @@
 
 기본적인 쿼리는
 
-SELECT * 또는 컬럼명1, 컬럼명2, 컬럼명3... FROM 테이블이름 WHERE 조건문;
+**SELECT * 또는 컬럼명1, 컬럼명2, 컬럼명3... FROM 테이블이름 WHERE 조건문**;
 
-위의 형태를 사용하고 항상 결과물은 다음의 그림처럼 테이블의 형태로 반환된다.
+위의 형태를 사용하고 항상 결과물은 다음처럼 테이블의 형태로 반환된다.
 
 |컬럼명1|컬럼명2|컬럼명3|
 |:----:|:-----:|:------:|
@@ -40,9 +40,8 @@ SELECT * 또는 컬럼명1, 컬럼명2, 컬럼명3... FROM 테이블이름 WHERE
 |GROUP BY|GROUP BY 컬럼| 해당 컬럼내의 같은 값은 하나로 묶는다.|
 |HAVING|HAVING 조건| 조건에 맞는 것을 집계 하여 출력한다.|
 
-
-
 <br />
+
 #### 출력값 변형하는 것,
 SELECT의 바로 다음에 사용한다.
 
