--- a/database/study003_20171012.md
+++ b/database/study003_20171012.md
@@ -12,7 +12,7 @@
 
 기본적인 쿼리는
 
-SELECT * 또는 컬럼명1, 컬럼명2, 컬럼명3... FROM 테이블이름 WHERE 조건문;
+**SELECT * 또는 컬럼명1, 컬럼명2, 컬럼명3... FROM 테이블이름 WHERE 조건문;**
 
 위의 형태를 사용하고 항상 결과물은 다음의 그림처럼 테이블의 형태로 반환된다.
 
@@ -129,9 +129,9 @@ SELECT의 바로 다음에 사용한다.
 
 |명령어|사용법|의미|
 |:-:|:--|:--|
-|INNER JOIN|SELECT 컬럼<br/>FROM 테이블1<br/>INNER JOIN 테이블2 ON 조건 |테이블1의 컬럼1과 테이블2의 컬럼1이 같은 경우 겹치는 테이블만 참조한다.|
+|INNER JOIN|SELECT 컬럼<br/>FROM 테이블1<br/>INNER JOIN 테이블2 ON 조건 |두 테이블간 조건에 맞게 겹치는 부분만 참조한다.|
 |FULL JOIN|SELECT 컬럼<br/>FROM 테이블1<br/>FULL OUTER JOIN 조건|두 개의 테이블내의 모든 데이터를 참조한다.|
-|LEFT JOIN|SELECT 컬럼<br/>FROM 테이블1<br/>LEFT OUTER JOIN 테이블2 ON 조건|테이블1의 모든 데이터와 조건에 맞게 겹치는 테이블2의 ㅇ리부 데이터를 참조한다.|
+|LEFT JOIN|SELECT 컬럼<br/>FROM 테이블1<br/>LEFT OUTER JOIN 테이블2 ON 조건|테이블1의 모든 데이터와 조건에 맞게 겹치는 테이블2의 일부 데이터를 참조한다.|
 |RIGHT JOIN|SELECT 컬럼<br/>FROM 테이블1<br/>RIGHT OUTER JOIN 테이블2 ON 조건|조건에 맞게 겹치는 테이블1의 일부 데이터와 테이블2의 모든 데이터를 모두 참조한다.|
 |SELF JOIN|SELECT 컬럼<br/>FROM 테이블1 as t1, 테이블1 as t2|테이블을 각각 t1,t2로 구분해서 사용하며 두개의 테이블은 내부의 테이블을 참조한다.|
 
