--- a/database/study006_20171102.md
+++ b/database/study006_20171102.md
@@ -22,8 +22,20 @@
     - 순차 세트 : 단말 노드로만 구성, 단말 노드에 모든 키값이 나타나게 하여 단말 노드에서만 순차검색
 
 기본 인덱스 : 기본키 속성으로만 만든 인덱스(키값 = 기본키)
-보조 인덱스 : 기본키가 아닌 일반 속석ㅇ으로 만든 인덱스
+보조 인덱스 : 기본키가 아닌 일반 속성으로 만든 인덱스
+
+**다단계 인덱스 : 인덱스들의 인덱스** 인덱스를 인덱스로 만들어서 관리하며, 주기억 장치(RAM)에 최상위 인덱스를 놓고 다른 인덱스들을 디스크 또는 주기억 장치에 저장해두고 사용하는 방법.
 
 인덱스 기타 유형
 - 클러스터드 인덱스(clustered index) : 하나의 속성을 기준으로 정렬시킨후, Table을 재구성하여 인덱스의 생성 테이블의 물리적 순서와 인덱스 순서가 동일하다. 하나의 테이블에는 하나의 인덱스만 만들 수 있다. 재구성한 테이블을 일정한 크기(페이지)로 구성하고 페이지 단위를 데이터페이지로 구성 후 각 데이터페이지 첫번째 키 값, 페이지 번호로 인덱스를 구성한다.
 - 넌클러스터드 인덱스 (Non-clustered index) : 테이블을 재구성하지 않고 데이터 주소를 이용하여 인덱스 구성 후 주소 값을 이용하여 검색, 하나으 ㅣ테이블에 여러개 인덱스 구성 가능(테이블을 재구성 하지 않기 때문에) 테이블을 일정한 페이지 단위로 여러개 데이터페이지 생성 후 키값과 인덱스 페이지 번호로 루트인덱스 구성(RowID : 데이터페이지 번호 - 행번호)
+
+
+#### 토막상식1
+컴퓨터의 저장장치 : 데이터 로드 속도의 빠르기와 저장용량은 트레이드 오프의 관계를 가진다. 아래로 갈수록 (속도↓, 가격↓, 용량↑), 이며 3.과 4.은 같은 급이지만 속도의 차이를 가지고 있다.
+1. 트랜지스터(CPU)
+2. 주기억장치(RAM)
+3. SSD(물리기억장치)
+4. HDD(물리기억장치)
+
+물리기억장치의 상대적으로 느린 속도를 극복하기 위해 데이터베이스 중에 인덱스만 주기억 장치에 두고 빠르게 읽고, 필요한 데이터베이스의 컬럼의 물리주소(RowID)만 물리기억장치에서 읽어오면 훨씬 빠르게 찾기가 가능해진다. 인덱스는 자주 찾아야 하지만, 양이 많은 경우에 쓰면 그 효과를 크게 느낄 수 있다.
