--- a/database/study007_20171109.md
+++ b/database/study007_20171109.md
@@ -16,6 +16,29 @@
 
 E:Entity *개체*, R:Relation *관계*, A:Attribute *속성*
 
+#### ER 설계 방법
+1. 요구 사항 분석 => 요구사항 명세서
+    1. 데이터베이스를 실제로 사용하는 사용자읨 범위 결정
+    2. 사용자가 조직에서 수행하는 업무를 분석
+    3. 면담, 설문 조사, 업무 고나련 문서 분석 등의 방법을 이용해 요구사항 수집
+    4. 수집된 요구 사항에 대한 분석 결과를 요구 사항 명세서로 작성
+2. 개념적 설계 => ER다이어그램
+    1. 개체 추출, 각 개체의 주요 속성과 키 속성 선별
+    2. 개체 간의 관계 결정
+    3. ER다이어그램으로 표현
+3. 논리적 설계 => 릴레이션 스키마
+    1. ER다이어그램을 릴레이션 스키마로 표현한다. 몇 가지 규칙을 준수한다
+        - 모든 개체는 릴레이션으로 변환한다
+        - 다대다 관계는 릴레이션으로 변환한다
+        - 일대다 관계를 외래키로 표현한다
+        - 일대일 관계는 외래키로 표현한다
+        - 다중값 속성은 릴레이션으로 변환한다
+        - 기타 고려사항으로는 개체가 자신과 관계를 맺는 경우, 기본 규칙을 그대로 적용한다.
+4. 물리적 설계 => 물리적 스키마
+    1. 하드웨어나 운영체제의 특성을 고려하여 필요한 인덱스 구조나 내부 저장구조 등에 대한 물리적 구조를 설계한다.
+5. 구현 => 완성
+    1. SQL로 작성한 명령문을 DBMS에서 실행하여 데이터베이스를 실제로 생성한다.
+
 
 #### 정규화를 이용한 설계(이상 현상을 제거하면서 데이터 베이스를 올바르게 설계해 나가는 과정)
 
@@ -41,10 +64,10 @@ E:Entity *개체*, R:Relation *관계*, A:Attribute *속성*
         - 릴레이션의 모든 속성이 더는 분해되지 않는 원자 값만 가지는 형태
         - 데이터 베이스 릴레이션이 될 자격이 있음, 이상이 또 있는 경우는 부분 함수 종속 이므로, 릴레이션을 분해하여 완전 함수 종속으로 만든다.(제2 정규형)
     2. 제2정규형
-        - 릴레이션이 제 1정규형에 속하고, 기본키가 아닌 모든 속성이 기본키에 완전 함수 종속되면 제 2정규형을 만족한다.
+        - 릴레이션이 제 1정규형에 속하고, 기본키가 아닌 모든 속성이 기본키에 **완전 함수 종속 되면 제 2정규형**을 만족한다.
         - 이행적 함수 종속이 존재하면, 릴레이션 내의 겹치는 종속 관계가 발생, 이행적 함수 종속이 제거되도록 릴레이션을 분해한다.(제 3정규형)
     3. 제3정규형
-        - 릴레이션이 제 2정규형에 속하고, 기본키가 아닌 모든 속성이 기본키에 이행적 함수 종속되지 않으면 제 3 정규형을 만족한다.
+        - 릴레이션이 제 2정규형에 속하고, 기본키가 아닌 모든 속성이 기본키에 **이행적 함수 종속되지 않으면 제 3 정규형**을 만족한다.
     4. 보이스/코드 정규형(강한 형태의 제3 정규형)
         - 하나의 릴레이션에 여러 개의 후보키가 존재하는 경우, 제 3정규형까지 모두 만족해도 이상현상이 발생할 수 있다.
         - 릴레이션의 함수 종속 관계에서 모든 결정자가 후보키이면, 보이스/코드 정규형에 속한다.
@@ -111,26 +134,3 @@ E:Entity *개체*, R:Relation *관계*, A:Attribute *속성*
 |int|int|varchar(200)|
 
 위의 결과물 처럼 나왔고, 실제 데이터베이스 구현은 이를 SQL문으로 만들어서 실행시키면 완성이되게 된다.
-
-#### ER 설계 방법
-1. 요구 사항 분석 => 요구사항 명세서
-    1. 데이터베이스를 실제로 사용하는 사용자읨 범위 결정
-    2. 사용자가 조직에서 수행하는 업무를 분석
-    3. 면담, 설문 조사, 업무 고나련 문서 분석 등의 방법을 이용해 요구사항 수집
-    4. 수집된 요구 사항에 대한 분석 결과를 요구 사항 명세서로 작성
-2. 개념적 설계 => ER다이어그램
-    1. 개체 추출, 각 개체의 주요 속성과 키 속성 선별
-    2. 개체 간의 관계 결정
-    3. ER다이어그램으로 표현
-3. 논리적 설계 => 릴레이션 스키마
-    1. ER다이어그램을 릴레이션 스키마로 표현한다. 몇 가지 규칙을 준수한다
-        - 모든 개체는 릴레이션으로 변환한다
-        - 다대다 관계는 릴레이션으로 변환한다
-        - 일대다 관계를 외래키로 표현한다
-        - 일대일 관계는 외래키로 표현한다
-        - 다중값 속성은 릴레이션으로 변환한다
-        - 기타 고려사항으로는 개체가 자신과 관계를 맺는 경우, 기본 규칙을 그대로 적용한다.
-4. 물리적 설계 => 물리적 스키마
-    1. 하드웨어나 운영체제의 특성을 고려하여 필요한 인덱스 구조나 내부 저장구조 등에 대한 물리적 구조를 설계한다.
-5. 구현 => 완성
-    1. SQL로 작성한 명령문을 DBMS에서 실행하여 데이터베이스를 실제로 생성한다.
