--- a/database/study010_20171130.md
+++ b/database/study010_20171130.md
@@ -1,3 +1,16 @@
+<head>
+<!-- style 태그는 웹문서의 <head></head> 태그 안에 있는게 좋다. -->
+<style>
+    .target {
+        border: 1px solid #f42;
+    }
+
+    #babo {
+        border: 1px solid #4f2;
+    }
+</style>
+</head>
+
 # 데이터베이스 튜터링
 ===================
 
@@ -124,6 +137,7 @@ GET 으로 보내면 데이터들이 /주소?name=value&name=value 요렇게 요
 <br/>
 
 - 순서가 있는 리스트 태그
+
         <ol>
             <li>한치</li>
             <li>두치</li>
@@ -188,16 +202,7 @@ babo.html 이 있을 때
     <p class="target">바보바보야 경계선좀 만들어줘</p>
     <p id="babo">바보바보야</p>
 ```
-<!-- style 태그는 웹문서의 <head></head> 태그 안에 있는게 좋다. -->
-<style>
-    .target {
-        border: 1px solid #f42;
-    }
 
-    #babo {
-        border: 1px solid #4f2;
-    }
-</style>
 
 <p class="target">바보바보야 경계선좀 만들어줘</p>
 <p id="babo">바보바보야</p>
@@ -219,8 +224,6 @@ babo.html 이 있을 때
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 <%@ page import = "java.sql.*" %>
-<%@ page import = "java.util.*" %>
-<%@ page import = "jspPackage.*" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <%
