--- a/database/study010_20171130.md
+++ b/database/study010_20171130.md
@@ -172,11 +172,7 @@ babo.html 이 있을 때
 ```
     <p style="border: 1px solid #f42;" >바보바보야 경계선좀 만들어줘</p>
 ```
-<dl>
-    <dd>
-        <p style="border: 1px solid #f42;" >바보바보야 경계선좀 만들어줘</p>
-    </dd>
-</dl>
+<iframe src="./html/style_inline.html"></iframe>
 
 요렇게 쓰기도 하고
 ```
@@ -195,21 +191,8 @@ babo.html 이 있을 때
         <p id="babo">바보바보야</p>
 ```
 
-<dl>
-    <dd>
-        <style>
-            .target {
-                border: 1px solid #f42;
-            }
-
-            #babo {
-                border: 1px solid #4f2;
-            }
-        </style>    
-        <p class="target">바보바보야 경계선좀 만들어줘</p>
-        <p id="babo">바보바보야</p>
-    </dd>
-</dl>
+<iframe src="./html/style.html">
+</iframe>
 
 사실 생긴게 못생겨서 별로라고 느낄 수도 잇지만, 요런식으로 꾸밀 수 있다는 예시였다.
 
