--- a/database/study010_20171130.md
+++ b/database/study010_20171130.md
@@ -172,9 +172,9 @@ babo.html 이 있을 때
 ```
     <p style="border: 1px solid #f42;" >바보바보야 경계선좀 만들어줘</p>
 ```
-<iframe src="./html/style_inline.html"></iframe>
 
 요렇게 쓰기도 하고
+
 ```
     <!-- style 태그는 웹문서의 <head></head> 태그 안에 있는게 좋다. -->
         <style>
@@ -191,10 +191,7 @@ babo.html 이 있을 때
         <p id="babo">바보바보야</p>
 ```
 
-<iframe src="./html/style.html">
-</iframe>
-
-사실 생긴게 못생겨서 별로라고 느낄 수도 잇지만, 요런식으로 꾸밀 수 있다는 예시였다.
+사실 예제는 생긴게 못생겨서 별로라고 느낄 수도 잇지만, 요런식으로 꾸밀 수 있다는 예시였다.
 
 #### 3. Javascript
 **Javascript** JAVA 같지만 C기반의 웹에서 동작하는 스크립트 언어다. 이건 내용은 알필요 없고, 음... DOM, 이벤트, 비동기 통신만 알면 더 알 필요 없지만, 과제에서는 안쓰는게 정신건강에 이로우니 위의 2가지만 사용해서 만들자.
