--- a/database/study010_20171130.md
+++ b/database/study010_20171130.md
@@ -237,7 +237,9 @@ babo.html 이 있을 때
 
 		try{
             /*
-                2. 쿼리
+                2. 쿼리 :
+                데이터베이스에 하고 싶은 어떤 처리를 쓰면 된다.
+                ex) SELECT, UPDATE, INSERT INTO ...
             */
 			String query = "SELECT * FROM foo";
 			stmt = conn.createStatement();
@@ -255,9 +257,12 @@ babo.html 이 있을 때
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>예시문</h1>
-	<% /* 3. HTML문서 */ %>
+    <% /* 3. HTML문서 보여주고 싶은 화면 ex) table */ %>
+	<h1>예시문(제목)</h1>
+
+    <% /* 테이블 만들기 */ %>
 	<table style="border: 1px solid black;">
+        <% /* 컬럼 이름으로 가장 위에 보여주는 것, 다른 이름으로 바꿔도 상관없다 */ %>
 		<thead>
 			<tr>
 				<td>PK</td>
@@ -266,6 +271,8 @@ babo.html 이 있을 때
 				<td>Hobby</td>
 			</tr>
 		</thead>
+
+        <% /* tbody에 내용이 들어가는데 반복문으로 쿼리문으로 가져온 데이터를 모두 보여준다. */ %>
 		<tbody>
 		<% while(rs.next()){ %>
 			<tr style="border-bottom: 1px solid black;">
@@ -286,14 +293,14 @@ babo.html 이 있을 때
 <%
         // 4. 에러가 발생했거나 연결종료
         } catch(SQLException ex){
-			ex.printStackTrace();
-		} finally{
+			ex.printStackTrace(); // 에러발생 시 콘솔에 나옴
+		} finally{ // 에러가 발생하든 잘 되었든 마지막에는 연결을 종료
 			if(rs != null){
 				try{
 					rs.close();
 				}
 				catch(SQLException sqlEx){
-					/* 무시 */
+					/* 결과 보여준거 종료하다가 난 에러 무시 */
 				}
 
 				rs = null;
@@ -303,7 +310,7 @@ babo.html 이 있을 때
 				try{
 					stmt.close();
 				} catch(SQLException sqlEx){
-					/* 무시 */
+					/* SQL썼던거 종료하다가 난 에러 무시 */
 				}
 
 				stmt = null;
@@ -313,7 +320,7 @@ babo.html 이 있을 때
 				try{
 					conn.close();
 				} catch(Exception e){
-					/* 무시 */
+					/* 데이터베이스 연결 닫다가 난 에러 무시 */
 				}
 
 				conn = null;
