--- a/raspberrypi3/20171206_라즈베리파이3구축.md
+++ b/raspberrypi3/20171206_라즈베리파이3구축.md
@@ -13,6 +13,8 @@
 2. [ Start Menu ] - [ Preferences ] - [ Rasbberry Pi3 configurations ]
 로 들어가서 SSH,
 
+    - WIFI Localization 은 건드리지 말자!
+
 3. 윈도우에서 노트북과 라즈베리파이3 랜선으로 연결 후에
     - [ 제어판 ] - [ 네트워크 및 공유센터 ] - [ 어댑터 설정 ]
     - WIFI는 [ 속성 ] - [ 공유 ] - 다른네트워크가 사용설정 체크
@@ -37,3 +39,29 @@
     .
     .
     .
+
+
+### 1. 개발환경 설정
+
+1. 블루투스 확인
+
+    // 블루투스 장치 확인한다
+    hciconfig
+
+    // 만약 나오는게 없다면, 블루투스 장치 켜주자
+    sudo hciconfig hci0 up
+
+
+    // 주변에 연결가능한 장치 스캔
+    sudo hcitool lescan
+
+    // 연결가능 장치에 연결 맥 어드레스를 써주자
+    gatttool -l -b MAC-address
+
+
+
+2. python 개발환경 설정
+
+    sudo apt-get install python-pip libglib2.0-dev
+
+    sudo pip install bluepy
